<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/username_hint"
        app:layout_constraintBottom_toTopOf="@+id/password_textview"
        app:layout_constraintStart_toStartOf="@+id/page_title"
        app:layout_constraintTop_toBottomOf="@+id/page_title" />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="248dp"
        android:layout_height="68dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="524dp"
        android:text="@string/page_title"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password_hint"
        app:layout_constraintStart_toEndOf="@+id/username_textview"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext" />

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="92dp"
        android:layout_height="30dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:text="@string/username_view"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/username_edittext"
        app:layout_constraintStart_toStartOf="@+id/page_title"
        app:layout_constraintTop_toBottomOf="@+id/page_title" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="92dp"
        android:layout_height="30dp"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/password_view"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/password_edittext"
        app:layout_constraintStart_toStartOf="@+id/username_textview"
        app:layout_constraintTop_toBottomOf="@+id/username_textview" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>

